Actualizo app.py y mejoras reproductor cdmmmm fasfdas deterterterterte aaaaaaaaaaaaaa sdfsdfsdfsd drfsdrfs asdasd dfgdfg sdfsdfsd sdfsdfsdfsewrwerewwerewr sdfgsdfg fghfsdghdfg sdfasdfa

--- a/reproductor.html
+++ b/reproductor.html
@@ -18,7 +18,7 @@ window.addEventListener("DOMContentLoaded", () => {
     const playBtn = document.getElementById("playBtn");
     const videoInput = document.getElementById("videoUrl");
     const video = document.getElementById("video");
-    const apiUrl = "http://[2a00:1838:37:4db:ab74]:8000/get_m3u8"; // tu IP y puerto
+    const apiUrl = "http://35.239.208.148:5000/get_m3u8"; // tu IP y puerto
 
     playBtn.addEventListener("click", async () => {
         const url = videoInput.value.trim();
