Actualizo app.py y mejoras reproductor cdmmmm fasfdas deterterterterte aaaaaaaaaaaaaa sdfsdfsdfsd drfsdrfs asdasd dfgdfg sdfsdfsd sdfsdfsdfsewrwerewwerewr sdfgsdfg fghfsdghdfg sdfasdfa dfgdfg dsrsf sdfgsdf fdfgdsf sdfs dsdf sdf sdf asdf sdf sadf sdf adsf asdasdads asd dd xz

--- a/app1/public/index.html
+++ b/app1/public/index.html
@@ -11,7 +11,7 @@
 <video id="video" controls width="640" height="360"></video>
 
 <script>
-const pageUrl = "https://hgbazooka.com/e/7ko6052x81jn";
+const pageUrl = "https://movearnpre.com/v/xj1j05poxbhw";
 
 async function playStream() {
   try {
